--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -47,7 +47,7 @@ body {
 }
 
 .ff-mos {
-  font-family: "MADE Okine Sans PERSONAL USE" !important;
+  font-family: "MADE Okine Sans PERSONAL USE";
 }
 .ffms-inherit {
   font-family: "MADE Okine Sans PERSONAL USE";
@@ -966,6 +966,7 @@ body {
   font-size: 12px;
   padding: 5px;
   display: none;
+  line-height: 1.5;
 }
 .delegate_btn_grid .tool-desc {
   left: 38px;
