enabled delegation for half validators

--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -641,7 +641,7 @@ div#web3-status-connected {
 }
 @media (max-width:767px){
     .navbar-expand .navbar-collapse > div .btn-status {
-        width: 35%;
+        width: auto;
     }
 }
 .tool-desc {
