Updated delegation and fixed Ui issues

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3426,7 +3426,7 @@ input:-internal-autofill-selected {
   }
   .dropdown-menu {
     background: $body-bg-secondry !important;
-    padding: 20px;
+    // padding: 20px;
     color: $white;
     position: absolute;
     top: 100%;
