--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -4261,7 +4261,7 @@ section.del-grid-section .txt-emp {
 .icon-block {
   position: absolute;
   right: 13px;
-  top: 16px;
+  top: 12px;
   left: auto;
   bottom: auto;
   cursor: pointer;
@@ -4949,9 +4949,13 @@ body::-webkit-scrollbar,
 }
 button:has(> p.no_btn) {
   background: none;
-  padding: 0;
+  padding: 11px 0;
+  font-size: 14px;
 }
 p.no_btn{
   color: red;
-  font-weight: 6006;
+  font-weight: 600;
+}
+.val_desc:hover span{
+  text-decoration: underline;
 }
