--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -136,7 +136,7 @@
     background: #E9E9EC;
     font-size: 16px;
     color: #596380;
-    padding: 10px 25px;
+    padding:10px 38px 10px 10px;
 }
 .t_a_clm{
     // flex: 1;
