--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -174,6 +174,7 @@ body.modal-open {
   }
   .shib-dropdown {
     margin-right: 20px;
+    z-index: 1111;
     @media #{$max-xsm} {
       margin-right: 0px;
     }
@@ -622,6 +623,11 @@ body.modal-open {
     padding: 10px !important;
     font-size: 14px;
     background-color: #151b28 !important;
+}
+.dd-style .dropdown-menu .dropdown-item a{
+  @media #{$max-sm}{
+    font-size: 14px;
+  }
 }
 }
 .navbar-expand .navbar-collapse > div {
