added condition on faucet

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3977,7 +3977,7 @@ section.del-grid-section .txt-emp {
 }
 
 .Toastify__progress-bar--success {
-  background: #f06500 !important;
+  background: #008a12 !important;
 }
 
 .Toastify__toast-icon svg path {
